[package]
name = "rate-my-bistro-server"
version = "0.1.0"
authors = ["Ansgar Sachs <ansgar.sa@gmail.com>, Rouven Himmelstein, Alicia Owen"]
description = "Web server for the bistro application."
documentation = "https://github.com/RateMyBistro/server/"
homepage = "https://github.com/RateMyBistro/server/"
repository = "https://github.com/RateMyBistro/server/"
readme = "./README.md"
keywords = ["rocket", "web", "bistro", "rating", "feedback"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
chrono = { version = "0.4", features = ["serde"]  }
arangors = { version = "0.4", features = ["surf_async"], default-features = false }
mobc-arangors = { version = "0.2", features = ["surf"], default-features = false }
mobc = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
