[package]
name = "rate-my-bistro-server"
version = "0.1.0"
authors = ["Ansgar Sachs <ansgar.sa@gmail.com>, Rouven Himmelstein, Alicia Owen"]
description = "A web server that servers the bistro application"
documentation = "https://github.com/RateMyBistro/server/"
homepage = "https://github.com/RateMyBistro/server/"
repository = "https://github.com/RateMyBistro/server/"
readme = "./README.md"
keywords = ["rocket", "web", "bistro", "rating", "feedback", "rating"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
arangors = { version = "0.4", features = ["surf_async"], default-features = false }
chrono = { version = "0.4", features = ["serde"]  }
mobc-arangors = { version = "0.2", features = ["surf"], default-features = false }
mobc = "0.7"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev= "2366bff05fe435977106106b918bb7e5a1d057df" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", rev= "2366bff05fe435977106106b918bb7e5a1d057df" }
serde = { version = "1.0", features = ["derive"] }
time = "0.2"

[[test]]
name = "cucumber"
harness = false

[dev-dependencies]
cucumber_rust = { version = "0.8", features = ["macros"] }
restson = "0.7"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
