[package]
name = "bistro-dao"
version = "0.1.0"
authors = ["Ansgar Sachs <ansgar.sa@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bistro-contract = { path = "../bistro-contract" }
arangors = "0.4.4"

