[package]
name = "bistro-service"
version = "0.1.0"
authors = ["Ansgar Sachs <ansgar.sa@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bistro-contract = { path = "../bistro-contract" }
bistro-dao = { path = "../bistro-dao" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
env_logger = "0.7.1"
log = "0.4.11"
chrono = "0.4.13"
futures = "0.1"


